[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "learned_PA_sO2_estimator"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "requests",
    "googledrivedownloader",
    "tensorflow",
    "tensorflow-probability"
]

authors = [
  { name="Janek Grohl", email="janek.grohl@cruk.cam.ac.uk"},
]
description = "A Python Toolkit for running machine learning models to estimate oxygenation from photoacoustic data."
readme = "README.md"
requires-python = ">=3.8,<3.11"

keywords = [
    "photoacoustics",
    "spectral unmixing",
    "deep learning"
]

license = { file = "LICENSE", name = "MIT" }

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jgroehl/learned_PA_sO2_estimator"
"Bug Tracker" = "https://github.com/jgroehl/learned_PA_sO2_estimator/issues"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["learned_PA_sO2_estimator", "learned_PA_sO2_estimator.*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cl", "*.json", "*.csv", "*.txt"]

[tool.setuptools.exclude-package-data]
"*" = [".gitattributes", ".gitignore"]
